hassos/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hassos
  namespace: hassos
  labels:
    app: hassos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: hassos
  template:
    metadata:
      labels:
        app: hassos
    spec:
      containers:
        - name: hassos
          image: homeassistant/home-assistant:2026.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          volumeMounts:
            - name: hassos-config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 4
              memory: 4Gi
      volumes:
        - name: hassos-config
          persistentVolumeClaim:
            claimName: hassos-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: hassos
  namespace: hassos
spec:
  selector:
    app: hassos
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  type: ClusterIP
