hassos/resources/tempsvc.yml
# apply this if you need access to the ui
# during initial setup
apiVersion: v1
kind: Service
metadata:
  name: hassos-ui-temp
  namespace: hassos
  labels:
    app: hassos-ui-temp
  annotations: {"io.cilium/lb-ipam-ips": "10.10.10.111"}
spec:
  type: LoadBalancer
  selector:
    app: hassos
  ports:
  - port: 8123
    name: http
    protocol: TCP
    targetPort: 8123
