hassos/resources/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: headers-iot
  namespace: hassos
spec:
  headers:
    accessControlAllowMethods: ['GET', 'OPTIONS', 'PUT', 'POST', 'PATCH']
    accessControlMaxAge: 100
    browserXssFilter: true
    contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https:; font-src 'self' https: data:; connect-src 'self' https:; frame-src 'self' https:; media-src 'self' https:; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';"
    contentTypeNosniff: true
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    customResponseHeaders:
      X-Robots-Tag: none,noarchive,nosnippet,notranslate,noimageindex
    permissionsPolicy: "camera 'none'; geolocation 'none'; microphone 'none'; payment 'none'; usb 'none'; vr 'none';"
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    referrerPolicy: no-referrer
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hassos-webui
  namespace: hassos
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`iot.cryogence.io`)
      services:
        - name: hassos
          port: 8123
          scheme: http
      #middlewares:
      #  - name: headers-iot
      #    namespace: hassos
      #  - name: headers-authfwd
      #    namespace: authentik
  tls:
    secretName: cert-iot-io
